After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 588771 - recent API change causes aliasing warnings
recent API change causes aliasing warnings
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: API
2.27.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
: 590269 590842 590986 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-07-16 12:13 UTC by Jan Schmidt
Modified: 2009-08-06 19:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jan Schmidt 2009-07-16 12:13:00 UTC
This commit changes the way the SOUP_METHOD_GET define and friends are initialised, and causes strict aliasing warnings from GCC in GStreamer:

http://git.gnome.org/cgit/libsoup/commit/?id=aad40ac467d12a188aed01e543aef5016aa4d3cb

build output:

cc1: warnings being treated as errors
gstsouphttpsrc.c: In function ‘gst_soup_http_src_build_message’:
/usr/include/glib-2.0/glib/gthread.h:344: error: dereferencing pointer ‘_SOUP_METHOD_GET.111’ does break strict-aliasing rules
gstsouphttpsrc.c:1101: note: initialized from here
make: *** [libgstsouphttpsrc_la-gstsouphttpsrc.lo] Error 1
Comment 1 Dan Winship 2009-07-30 14:10:17 UTC
*** Bug 590269 has been marked as a duplicate of this bug. ***
Comment 2 Dan Winship 2009-07-31 20:41:58 UTC
fixed in master
Comment 3 Jonathan Matthew 2009-08-05 12:38:55 UTC
*** Bug 590842 has been marked as a duplicate of this bug. ***
Comment 4 Sebastian Dröge (slomo) 2009-08-06 19:22:09 UTC
*** Bug 590986 has been marked as a duplicate of this bug. ***