Re-fix _SOUP_ATOMIC_INTERN_STRING to not cause strict-aliasing warnings

http://bugzilla.gnome.org/show_bug.cgi?id=588771